<resources>
    <string name="app_name">MelZo</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Commencer le jeu</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">Appareils disponibles</string>
    <string name="retour_au_menu">Retour au menu</string>
    <string name="score_final_default">Score final : default</string>
    <string name="winner_final_default">Vainqueur : default</string>
    <string name="player_default">player default</string>
    <string name="score">Score</string>
    <string name="name_player">name_player</string>
    <string name="disponible_device_fr">Appareils disponibles :</string>
    <string name="backtomenuFR">Retour au menu</string>

</resources>